--- a/week2/styles.css
+++ b/week2/styles.css
@@ -1,10 +1,11 @@
 footer {
-    height: 75px;
+    height: 50px;
     width: 100%;
-    background-color: ;
+    background-color: lavender;
     border-top: solid;
 }
 
 footer h2 {
     text-align: center;
 }
+
